Load test modules split up by connection method