@@ -1,5 +1,5 @@
 plugins {
-    id 'chinook.application'
+    id 'chinook.library'
 }
 
 dependencies {
@@ -9,68 +9,4 @@ dependencies {
     implementation "is.codion.jdk11:codion-swing-common-tools-ui:${version}"
     implementation "is.codion.jdk11:codion-swing-framework-ui:${version}"
     implementation "is.codion.jdk11:codion-swing-framework-tools:${version}"
-
-    runtimeOnly "is.codion.jdk11:codion-framework-db-rmi:${version}"
-    runtimeOnly "is.codion.jdk11:codion-framework-db-http:${version}"
-}
-
-var applicationDefaultJvmArgsRemote = [
-        "-Xmx2048m",
-        "-Dcodion.client.connectionType=remote",
-        "-Dcodion.server.hostname=${serverHost}",
-        "-Dcodion.server.registryPort=${serverRegistryPort}",
-        "-Dcodion.client.connectionType=remote",
-        "-Dcodion.client.trustStore=truststore.jks",
-        "-Dcodion.client.trustStorePassword=crappypass",
-]
-
-var applicationDefaultJvmArgsHttp = [
-        "-Xmx2048m",
-        "-Dcodion.client.connectionType=http",
-        "-Dcodion.client.http.secure=false",
-        "-Dcodion.client.http.hostname=${serverHost}"
-]
-
-applicationDefaultJvmArgs = applicationDefaultJvmArgsRemote
-
-application {
-    mainModule = "is.codion.framework.demos.chinook.client.loadtest"
-    getMainClass().set("is.codion.framework.demos.chinook.client.loadtest.ChinookLoadTest")
-}
-
-jlink {
-    imageName = project.name
-    moduleName = application.mainModule
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules',
-               'is.codion.framework.db.rmi,is.codion.framework.db.http,is.codion.plugin.logback.proxy']
-
-    mergedModule {
-        excludeRequires("com.fasterxml.jackson.annotation")
-    }
-
-    launcher {
-        jvmArgs = applicationDefaultJvmArgs
-        jvmArgs += ["--add-reads", "chinook.merged.module=org.slf4j"]//for sslcontext-kickstart
-    }
-
-    jpackage {
-        imageName = "Chinook-Load-Test"
-        appVersion = project.version.replace('-SNAPSHOT', '')
-        if (org.gradle.internal.os.OperatingSystem.current().linux) {
-            installerType = 'deb'
-            icon = "../chinook.png"
-            installerOptions = [
-                    '--resource-dir', 'build/jpackage/Chinook-Load-Test/lib',
-                    '--linux-shortcut'
-            ]
-        }
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
-            installerType = 'msi'
-            icon = "../chinook.ico"
-            installerOptions = [
-                    '--win-menu',
-                    '--win-shortcut'
-            ]
-        }
-    }
 }
